--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.emcreations</groupId>
-    <artifactId>CourseworkUP608985</artifactId>
+    <groupId>mcknighte</groupId>
+    <artifactId>mcknighte</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>CourseworkUP608985</name>
+    <name>mcknighte</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
